<resources>
    <string name="app_name">KomaWeather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_add">Add city</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_more">More</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_help">Help</string>
    <string name="nav_exit">Exit</string>
    <string name="action_settings">Settings</string>

    <string-array name="indicator_strings">
        <item name="indicator_string_1">优</item>
        <item name="indicator_string_2">良</item>
        <item name="indicator_string_3">轻度污染</item>
        <item name="indicator_string_4">中度污染</item>
        <item name="indicator_string_5">重度污染</item>
        <item name="indicator_string_5">严重污染</item>
    </string-array>

    <integer-array name="indicator_colors">
        <item name="indicator_color_1">@color/indicator_color_1</item>
        <item name="indicator_color_2">@color/indicator_color_2</item>
        <item name="indicator_color_3">@color/indicator_color_3</item>
        <item name="indicator_color_4">@color/indicator_color_4</item>
        <item name="indicator_color_5">@color/indicator_color_5</item>
        <item name="indicator_color_6">@color/indicator_color_6</item>
    </integer-array>
</resources>
